--- a/bbing_master.bib
+++ b/bbing_master.bib
@@ -6878,4 +6878,33 @@ Mitigating strategies for improving the controller performance are proposed and 
   keywords = {Underwater vehicles},
 }
 
+@Article{sjoberg95nonlinear,
+  author   = {Jonas Sjöberg and Qinghua Zhang and Lennart Ljung and Albert Benveniste and Bernard Delyon and Pierre-Yves Glorennec and Håkan Hjalmarsson and Anatoli Juditsky},
+  title    = {Nonlinear black-box modeling in system identification: a unified overview},
+  journal  = {Automatica},
+  year     = {1995},
+  volume   = {31},
+  number   = {12},
+  pages    = {1691 - 1724},
+  note     = {Trends in System Identification},
+  issn     = {0005-1098},
+  doi      = {https://doi.org/10.1016/0005-1098(95)00120-8},
+  abstract = {A nonlinear black-box structure for a dynamical system is a model structure that is prepared to describe virtually any nonlinear dynamics. There has been considerable recent interest in this area, with structures based on neural networks, radial basis networks, wavelet networks and hinging hyperplanes, as well as wavelet-transform-based methods and models based on fuzzy sets and fuzzy rules. This paper describes all these approaches in a common framework, from a user's perspective. It focuses on what are the common features in the different approaches, the choices that have to be made and what considerations are relevant for a successful system-identification application of these techniques. It is pointed out that the nonlinear structures can be seen as a concatenation of a mapping form observed data to a regression vector and a nonlinear mapping from the regressor space to the output space. These mappings are discussed separately. The latter mapping is usually formed as a basis function expansion. The basis functions are typically formed from one simple scalar function, which is modified in terms of scale and location. The expansion from the scalar argument to the regressor space is achieved by a radial- or a ridge-type approach. Basic techniques for estimating the parameters in the structures are criterion minimization, as well as two-step procedures, where first the relevant basis functions are determined, using data, and then a linear least-squares step to determine the coordinates of the function approximation. A particular problem is to deal with the large number of potentially necessary parameters. This is handled by making the number of ‘used’ parameters considerably less than the number of ‘offered’ parameters, by regularization, shrinking, pruning or regressor selection.},
+  keywords = {Nonlinear systems, model structures, parameter estimation, wavelets, neural networks, fuzzy modeling},
+}
+
+@Article{nugroho18comparison,
+  author    = {L Nugroho and R Akmeliawati},
+  title     = {Comparison ofblack-grey-white boxapproach in system identification of a flight vehicle},
+  journal   = {Journal of Physics: Conference Series},
+  year      = {2018},
+  volume    = {1130},
+  month     = {nov},
+  pages     = {012024},
+  doi       = {10.1088/1742-6596/1130/1/012024},
+  url       = {https://doi.org/10.1088%2F1742-6596%2F1130%2F1%2F012024},
+  abstract  = {Developing an autonomous flight control system for a fixed-wing unmanned aerial vehicle (UAV) requires the mathematical representation of the system dynamics which can be obtained through system identification, such as using white, grey or black box methods. In this paper, three system identification methods; white method modeling using Cook formulas which is used analytically to develop the linear-time-invariant model structure with the aerodynamic coefficients of the UAV extracted from Missile DATCOM computations at certain flight conditions, and two empirical mathematical models constructed from non-linear flight simulator defined as the Greyification of Black Box Model (B2G) and Direct Grey to White Linkage (G2W). The comparison shows that both empirical methods prove to be very instrumental to contrast and produce higher sense of engineering than the analytical one},
+  publisher = {{IOP} Publishing},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
