--- a/usv_modeling.tex
+++ b/usv_modeling.tex
@@ -36,6 +36,7 @@
 \usepackage{multirow}
 \usepackage{amsmath}
 \usepackage{units}
+\usepackage{siunitx}
 \usepackage{acronym}
 \usepackage{csvsimple}
 \usepackage{color,soul}
