--- a/cusv_model.tex
+++ b/cusv_model.tex
@@ -76,6 +76,15 @@
 {\huge \doctitle}
 \end{center}
 
+\section{Overview}
+
+\begin{figure}[hbt!]
+\centering
+\includegraphics[width=0.6\linewidth]{images/bergdahl_roads.png}
+\caption{From \cite{bergdahl09wave}}
+\label{f:wave}
+\end{figure}
+
 \section{Vehicle Model}
 %
 To approximate the motion of a surface vehicle in the ocean environment, we adapt the six degree-of-freedom robot-like vectorial model for marine craft, proposed by \citet{fossen11handbook}, and expressed as\footnote{The rigid-body terms can be expressed equivalently using either the total vessel velocity or the velocity relative the fluid, see Property 8.1 of \citet{fossen11handbook}.  For our implementation the rigid-body terms and the hydrodynamics terms are solved for separately, and it is more direct to leverage the native physics engine in terms of total rigid-body velocity.}
@@ -349,12 +358,17 @@ $K_{p}, \, K_{p|p}, \, M_{q}$, $M_{q|q|}, \, N_{r}, \, N_{r|r|}$ & Drag & Variou
 \end{tabular}
 \end{table}
 
+\clearpage
+
 \section{Frequency Domain Model}
 
-Deduced from time-domain model via step response tests.  Identification of second-order transfer function parameters via logarithmic decrement.
+Deduced from time-domain model via step response tests.  Identification of second-order transfer function parameters via logarithmic decrement.  The form of the second order transfer function is
+\begin{equation}
+  G(s) = \frac{\omega_n^2}{s^2 + 2 \zeta \omega_n s + \omega_n^2}
+\end{equation}
 
 
-\begin{table}
+\begin{table}[hb!]
 \renewcommand{\arraystretch}{1.2}
 \caption{Frequency domain system parameters}
 \label{t:freq}
@@ -384,27 +398,140 @@ Deduced from time-domain model via step response tests.  Identification of secon
 \end{tabular}
 \end{table}
 
-\begin{figure}[hbt!]
+\begin{figure}[hb!]
 \centering
 \includegraphics[width=0.6\linewidth]{./src/usv_param_est/heave_step.png}
 \caption{Heave step response}
 \label{f:h}
 \end{figure}
 
-\begin{figure}[hbt!]
+\begin{figure}[hb!]
 \centering
 \includegraphics[width=0.6\linewidth]{./src/usv_param_est/pitch_step.png}
 \caption{Pitch step response}
 \label{f:p}
 \end{figure}
 
-\begin{figure}[hbt!]
+\begin{figure}[hb!]
 \centering
 \includegraphics[width=0.6\linewidth]{./src/usv_param_est/roll_step.png}
 \caption{Roll step response}
 \label{f:r}
 \end{figure}
 
+
+\clearpage
+
+\subsection{Spectral Metrics}
+
+Based on wave height metrics\footnote{\url{http://www.coastalwiki.org/wiki/Statistical_description_of_wave_parameters}}.
+
+\begin{equation}
+  E[\eta^2(t)] = \sigma_{\eta}^2 = m_0 = R_{\eta \eta}(\tau=0)  =  \int_{0}^{\infty}\Gamma_{\eta \eta}(\omega) d\omega
+\end{equation}
+where $\eta(x,y,t)$ is the ocean height at a certain location $x,y$ as a function of time $t$, $E[]$ is the expectation operator, $\sigma_{\eta}^2$ is the variance in wave height, equivalently the zeroth moment ($m_0$) and $\Gamma_{\eta \eta}(\omega)$ is the one-sided wave height spectrum as a function of angular frequency.
+
+
+\subsubsection{Wave Slope Spectra}
+
+For deep water waves the dispersion relation $\omega = \omega(k)$ is
+\begin{equation}
+  \omega = \sqrt{g\,k}.
+\end{equation}
+Because at any time $t$ we can consider a 2D wave and the slope of that wave as
+\begin{IEEEeqnarray}{rCl}\IEEEyesnumber\label{e:slope}
+    \eta(x) & = & a\cos(kx) \IEEEyessubnumber \\
+    \alpha(x)  = \frac{d \eta(x)}{dx}  & = & a \, k \cos(kx). \IEEEyessubnumber
+\end{IEEEeqnarray}
+The wave slope spectrum can be expressed as
+\begin{equation}
+  \Gamma_{\alpha \alpha} = k^2 \;  \Gamma_{\eta \eta}(\omega) =  \frac{\omega^4}{g^2}   \; \Gamma_{\eta \eta}(\omega)
+\end{equation}
+
+\subsubsection{Characteristic Wave Heights}
+
+As summarized in \cite{young99wind} the propbability density function of wave heights is typically considered to follow the Rayleigh distribution
+\begin{equation}
+  p(H; 2\sigma_{\eta}) = \frac{H}{(2\sigma_\eta)^2} e^{-H^2/(2(2\sigma_\eta)^2)}
+\end{equation}
+Here $H$ is the wave height and the Rayleigh distribution scale parameter is $\sigma = 2 \sigma_\eta$.
+
+
+
+\begin{table}[hb!]
+\renewcommand{\arraystretch}{1.7}
+\caption{Characteristic wave height metrics or represenatative measures of wave height}
+\label{t:wavemetrics}
+\centering
+\begin{tabular}{lcp{0.3\linewidth}}
+  \hline \hline
+  Characteristic & Parameter Value & Description \\
+  \hline 
+  Mean & $\bar{H} = H_{1/1} =  \sqrt{2 \pi} \, \sigma_\eta = 2.51 \, \sigma_\eta$ & Average height of all waves.\\
+  Root-mean-square & $H_{rms} = 2 \sqrt{2} \, \sigma_\eta = 2.83 \, \sigma_\eta$ & \\
+  Significant & $H_{1/3}=H_s = 4 \, \sigma_\eta$ & Average height of the 1/3rd highest waves. \\
+   & $H_{1/10} = 5.09 \, \sigma_\eta$ & Average height of the 1/10th highest waves. \\
+  & $H_{1/100} = 6.67 \, \sigma_\eta$ & Average height of the 1/100th highest waves. \\
+  
+\end{tabular}
+\end{table}
+
+\subsection{Results}
+% Set figure width
+\newcommand{\RFW}{0.7}
+
+\subsubsection{Wave Spectra: Wave Height and Slope}
+
+\begin{figure}[hbt!]
+\centering
+\includegraphics[width=\RFW\linewidth]{cusv/SvsT.png}
+\caption{Wave height spectra vs. wave period.}
+\label{f:SvsT}
+\end{figure}
+
+\begin{figure}[hbt!]
+\centering
+\includegraphics[width=\RFW\linewidth]{cusv/slopeVt.png}
+\caption{Wave slope spectra vs. wave period.}
+\label{f:slopeVt}
+\end{figure}
+
+\subsubsection{Vessel Motion Spectra: Heave, Pitch and Roll}
+
+\begin{figure}[hbt!]
+\centering
+\includegraphics[width=\RFW\linewidth]{cusv/SvsTwG.png}
+\caption{Wave height spectra alongside the heave response as a transfer function.}
+\label{f:SvsTwG}
+\end{figure}
+
+\begin{figure}[hbt!]
+\centering
+\includegraphics[width=\RFW\linewidth]{cusv/heaveresp.png}
+\caption{Heave spectra and heave height metrics.}
+\label{f:heaveresp}
+\end{figure}
+
+\begin{figure}[hbt!]
+\centering
+\includegraphics[width=\RFW\linewidth]{cusv/slope_respover.png}
+\caption{Slope spectra alongside pitch and roll responses as transfer functions.}
+\label{f:slope_respover}
+\end{figure}
+
+\begin{figure}[hbt!]
+\centering
+\includegraphics[width=\RFW\linewidth]{cusv/pitchresp.png}
+\caption{Pitch spectra and metrics, peak-to-peak in degrees}
+\label{f:pitchresp}
+\end{figure}
+
+\begin{figure}[hbt!]
+\centering
+\includegraphics[width=\RFW\linewidth]{cusv/rollresp.png}
+\caption{Roll spectra and metrics, peak-to-peak in degrees}
+\label{f:rollresp}
+\end{figure}
 
 \clearpage
 
