--- a/timeseries_from_psd.tex
+++ b/timeseries_from_psd.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt]{article}
 %\usepackage[firstpage]{draftwatermark}
-\usepackage{times}
+%\usepackage{times}
+%\usepackage{natbib}
 \usepackage{pdfpages}
 \usepackage{fullpage}
 \usepackage{url}
@@ -93,16 +94,14 @@ This article describes techniques to generate a time series, $y(t)$, that is a s
 Methods for simulation of stochastic process include convariance decomposition, auto-regressive moving-average (ARMA), noise shower, scale refinement, turning band and spectral representation \cite{cao00simulation}.  This report discusses the spectral representation method.
 
 \subsection{Background}
-Original work on spectral representation of a stochastic process \cite{rice44mathematical1,rice45mathematical2}.  Some of the original approaches to generating a time series with given PSD were based the design of a linear filter for which white noise input would generate an output with the desired PSD.  Introduced sum of cosines \cite{borgman69ocean}.
-
-\cite{shinozuka72monte}
-
-Methods:
+Original work on spectral representation of a stochastic process \cite{rice44mathematical1,rice45mathematical2}.  Some of the original approaches to generating a time series with given PSD were based the design of a linear filter for which white noise input would generate an output with the desired PSD.  Introduced sum of cosines \cite{borgman69ocean, shinozuka72monte}.  Methods:
 \begin{itemize}
-\item Linear filtering - (spectral factorization?)
+\item Linear filtering and spectral factorization.
 \item Spectral representation - sum of cosines
 \item Spectral representation - FFT/IFFT
-\end{itemize}  
+\end{itemize}
+\noindent
+For general time series analysis see \cite{marchal15notes} and the references there in.
 
 \subsection{Frequency, Sidedness, Conventions, Notation and Scaling}
 
@@ -113,8 +112,6 @@ Our goal is to generate time series realizations of stochastic processes describ
 \item Use of the two-sided or one-sided PSD.
 \end{itemize}
 These issues are not of primary importance in mathematics and physics domains, or in applications where both the transform and inverse transform are used.  For our engineering applications, maintaining the physical relevance between the expression of the PSD (in either frequency units and either sidedness) and the time series with physically meaningful units is important.  One of the primary contributions of this report is to provide a complete and consistent synthesis of the simulation generation process with explicit notation to make use of the various conventions for expressing PSD sidedness, frequency units and Fourier transform scaling.
-
-
 
 
 \section{Preliminaries}
@@ -418,8 +415,10 @@ The figure illustrates that both time series have equivalent estimated PSDs and 
 
 \newpage
 \setcounter{page}{1}
-\bibliographystyle{IEEEtran}
-\bibliography{bbing_master}
+%\bibliographystyle{IEEEtran}
+\bibliographystyle{apalike}
+%bibliography{bbing_master}
+\bibliography{../latexlib/bib/bbing_master}
 
 \end{document}
 
