--- a/cusv_model.tex
+++ b/cusv_model.tex
@@ -480,6 +480,8 @@ Here $H$ is the wave height and the Rayleigh distribution scale parameter is $\s
 % Set figure width
 \newcommand{\RFW}{0.7}
 
+The source for generating the analysis and figures is in the \verb+leanis_analysis+ repository at \url{https://bitbucket.org/greensightag/leanis_analysis/src/master/vessel_seakeeping/wave_spectrum_ex.py}.
+
 \subsubsection{Wave Spectra: Wave Height and Slope}
 
 \begin{figure}[hbt!]
