--- a/timeseries_from_psd.tex
+++ b/timeseries_from_psd.tex
@@ -101,7 +101,7 @@ Original work on spectral representation of a stochastic process \cite{rice44mat
 \item Spectral representation - FFT/IFFT
 \end{itemize}
 \noindent
-For general time series analysis see \cite{marchal15notes} and the references there in.
+For general time series analysis see \cite{marchal15notes} and the references therein.
 
 \subsection{Frequency, Sidedness, Conventions, Notation and Scaling}
 
@@ -417,8 +417,8 @@ The figure illustrates that both time series have equivalent estimated PSDs and 
 \setcounter{page}{1}
 %\bibliographystyle{IEEEtran}
 \bibliographystyle{apalike}
-%bibliography{bbing_master}
-\bibliography{../latexlib/bib/bbing_master}
+\bibliography{bbing_master}
+%\bibliography{../latexlib/bib/bbing_master}
 
 \end{document}
 
