switching to local bib

--- a/techreport_timeseries_from_psd.tex
+++ b/techreport_timeseries_from_psd.tex
@@ -465,8 +465,8 @@ The figure illustrates that both time series have equivalent estimated PSDs and 
 
 % Please do not use a different bst (bibtex style file) to ensure formatting is correct. However, if you must risk it, it must be the first argument, and separated in []
 % note: you can include multiple bib files (just comma separate them)
-%\NPSbibliography{bbing_master}
-\NPSbibliography{../latexlib/bib/bbing_master}
+\NPSbibliography{bbing_master}
+%\NPSbibliography{../latexlib/bib/bbing_master}
 
 %\cleardoublepage
 %\bibliographystyle{nps_thesis}
